Remove all AI references from landing page

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CreatorFlow Management — AI-Powered OnlyFans Management</title>
-    <meta name="description" content="AI-powered OnlyFans management that 2-3x your DM revenue. Your voice, not scripts. Month-to-month. No password sharing.">
+    <title>CreatorFlow Management — OnlyFans Management Done Right</title>
+    <meta name="description" content="OnlyFans management that actually sounds like you that 2-3x your DM revenue. Your voice, not scripts. Month-to-month. No password sharing.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
@@ -567,9 +567,9 @@
     <!-- HERO -->
     <section class="hero">
         <div class="hero-content">
-            <span class="hero-badge">🤖 AI-Powered Management</span>
+            <span class="hero-badge"> Professional Management</span>
             <h1>Turn Every Fan DM Into <span class="gradient-text">Revenue</span></h1>
-            <p>We manage your OnlyFans chat so you can focus on content. AI-powered replies in your voice, 24/7 — so no fan message goes unanswered.</p>
+            <p>We manage your OnlyFans chat so you can focus on content. Replies in your voice, 24/7 — so no fan message goes unanswered.</p>
             <div class="hero-buttons">
                 <a href="https://x.com/CreatorFlow2000" target="_blank" class="btn-primary">📩 Get a Free Audit</a>
                 <a href="#how-it-works" class="btn-secondary">See How It Works ↓</a>
@@ -601,7 +601,7 @@
             <div class="service-card">
                 <div class="service-icon">💬</div>
                 <h3>24/7 Chat Management</h3>
-                <p>AI-assisted chat operators handle your DMs around the clock. Every fan gets a reply within 2 hours — in your voice, not generic scripts.</p>
+                <p>Dedicated chat operators handle your DMs around the clock. Every fan gets a reply within 2 hours — in your voice, not generic scripts.</p>
             </div>
             <div class="service-card">
                 <div class="service-icon">📈</div>
@@ -609,9 +609,9 @@
                 <p>Smart PPV pricing, fan segmentation, and upsell strategies that turn casual subscribers into high-spending fans.</p>
             </div>
             <div class="service-card">
-                <div class="service-icon">🤖</div>
-                <h3>AI-Powered Insights</h3>
-                <p>Our AI analyses your fan behaviour, identifies your top spenders, and suggests the best times and content to maximise sales.</p>
+                <div class="service-icon"></div>
+                <h3>Smart Insights</h3>
+                <p>We analyse your fan behaviour, identify your top spenders, and suggest the best times and content to maximise sales.</p>
             </div>
             <div class="service-card">
                 <div class="service-icon">🎯</div>
@@ -702,13 +702,13 @@
                 We started CreatorFlow because we saw too many creators burning out from the DM grind — and too many agencies treating them like numbers on a spreadsheet.
             </p>
             <p class="about-text">
-                Our approach is different: AI handles the heavy lifting (response speed, fan analytics, optimal timing), while human managers maintain the personal touch that keeps fans spending. The result? More revenue, less screen time, and a business that actually feels sustainable.
+                Our approach is different: Our systems handle the heavy lifting (response speed, fan analytics, optimal timing), while dedicated managers maintain the personal touch that keeps fans spending. The result? More revenue, less screen time, and a business that actually feels sustainable.
             </p>
             <p class="about-text">
                 We deliberately stay small — 8 clients max — because great management means knowing every creator's voice, audience, and goals inside out. No templates. No generic scripts. Just results.
             </p>
             <div class="about-values">
-                <div class="about-value">🤖 AI + Human Hybrid</div>
+                <div class="about-value">⚡ Tech + Human Hybrid</div>
                 <div class="about-value">🔐 Security First</div>
                 <div class="about-value">📈 Data-Driven</div>
                 <div class="about-value">🤝 Creator-Focused</div>
